--- a/Makefile.config
+++ b/Makefile.config
@@ -76,16 +76,15 @@ BLAS_LIB := $(shell brew --prefix openblas)/lib
 		# $(ANACONDA_HOME)/lib/python2.7/site-packages/numpy/core/include
 
 # Uncomment to use Python 3 (default is Python 2)
-PYTHON_LIBRARIES := boost_python3 python3.7m
-PYTHON_INCLUDE := /usr/include/python3.7m \
-                 /usr/local/lib/python3.7/site-packages/numpy/core/include
+PYTHON_LIBRARIES := boost_python37 python
+PYTHON_INCLUDE := /usr/local/lib/python3.7/site-packages/numpy/core/include
 
 # We need to be able to find libpythonX.X.so or .dylib.
 PYTHON_LIB := /usr/lib /usr/local/Cellar/python/3.7.0/Frameworks/Python.framework/Versions/3.7/lib/
 # PYTHON_LIB := $(ANACONDA_HOME)/lib
 
 # Homebrew installs numpy in a non standard path (keg only)
-PYTHON_INCLUDE += $(dir $(shell python -c 'import numpy.core; print(numpy.core.__file__)'))/include
+PYTHON_INCLUDE += $(dir $(shell python3 -c 'import numpy.core; print(numpy.core.__file__)'))/include
 PYTHON_LIB += $(shell brew --prefix numpy)/lib
 
 # Uncomment to support layers written in Python (will link against Python libs)
