--- a/Makefile.config
+++ b/Makefile.config
@@ -76,11 +76,11 @@ BLAS_LIB := $(shell brew --prefix openblas)/lib
 		# $(ANACONDA_HOME)/lib/python2.7/site-packages/numpy/core/include
 
 # Uncomment to use Python 3 (default is Python 2)
-PYTHON_LIBRARIES := boost_python37 python
+PYTHON_LIBRARIES := boost_python37-mt python3.7
 PYTHON_INCLUDE := /usr/local/lib/python3.7/site-packages/numpy/core/include
 
 # We need to be able to find libpythonX.X.so or .dylib.
-PYTHON_LIB := /usr/lib /usr/local/Cellar/python/3.7.0/Frameworks/Python.framework/Versions/3.7/lib/
+PYTHON_LIB := /usr/lib /usr/local/lib /usr/local/Cellar/python/3.7.0/Frameworks/Python.framework/Versions/3.7/lib/
 # PYTHON_LIB := $(ANACONDA_HOME)/lib
 
 # Homebrew installs numpy in a non standard path (keg only)
