--- a/Makefile.config
+++ b/Makefile.config
@@ -76,11 +76,11 @@ BLAS_LIB := $(shell brew --prefix openblas)/lib
 		# $(ANACONDA_HOME)/lib/python2.7/site-packages/numpy/core/include
 
 # Uncomment to use Python 3 (default is Python 2)
-PYTHON_LIBRARIES := boost_python37-mt python3.7
-PYTHON_INCLUDE := /usr/local/lib/python3.7/site-packages/numpy/core/include
+PYTHON_LIBRARIES := boost_python38-mt python3.8
+PYTHON_INCLUDE := /usr/local/lib/python3.8/site-packages/numpy/core/include
 
 # We need to be able to find libpythonX.X.so or .dylib.
-PYTHON_LIB := /usr/lib /usr/local/lib /usr/local/Cellar/python/3.7.3/Frameworks/Python.framework/Versions/3.7/lib/
+PYTHON_LIB := /usr/lib /usr/local/lib /usr/local/Cellar/python@3.8/3.8.5/Frameworks/Python.framework/Versions/3.8/lib
 # PYTHON_LIB := $(ANACONDA_HOME)/lib
 
 # Homebrew installs numpy in a non standard path (keg only)
@@ -91,7 +91,7 @@ PYTHON_LIB += $(shell brew --prefix numpy)/lib
 # WITH_PYTHON_LAYER := 1
 
 # Whatever else you find you need goes here.
-INCLUDE_DIRS := $(PYTHON_INCLUDE) /usr/local/include /usr/local/include/opencv4 /usr/local/Cellar/python/3.7.3/Frameworks/Python.framework/Versions/3.7/Headers
+INCLUDE_DIRS := $(PYTHON_INCLUDE) /usr/local/include /usr/local/include/opencv4 /usr/local/Cellar/python@3.8/3.8.5/Frameworks/Python.framework/Versions/3.8/Headers
 LIBRARY_DIRS := $(PYTHON_LIB) /usr/local/lib /usr/lib
 
 # If Homebrew is installed at a non standard location (for example your home directory) and you use it for general dependencies
